Changes with APR-util 0.9.13



Changes with APR-util 0.9.12

  *) Win32 / Netware - add missing apu_version.c for apu_version_string()
     to the Windows and Netware specific builds.  Unix platforms supported
     this API since 0.9.1.  [William Rowe, Brad Nicholes].

Changes with APR-util 0.9.11

  *) Sync get-version.sh from apr source at ./buildconf time, to correctly
     retrieve 2 digit subversion, which broke the 0.9.10 candidate, and
     keep any other updates in sync going forwards.  [William Rowe]

  *) Port apr tree change for 'make check' test/ binaries on Darwin to
     avoid -no-install which can break the tests.  [William Rowe, Joe Orton]

Changes with APR-util 0.9.10

  *) Minor build and runtime fixes.

Changes with APR-util 0.9.9

  *) Unix: No longer require an APR source directory to be available at
     ./configure time, by making use of mkdir.sh, make_exports.awk,
     make_var_export.awk installed to the installbuilddir by APR >= 0.9.9.
     [Max Bowsher]

  *) Stop trying to link against Berkeley DB by default.  To enable use
     of Berkeley DB users must now explicitly pass --with-berkeley-db to
     configure, since Berkeley DB is released under a viral license that
     requires distribution of source code for any program that uses it.
     [Garrett Rooney]

  *) Stop trying to link against GDBM by default.  To enable use of GDBM
     users must now explicitly pass --with-gdbm to configure, since GDBM
     is licensed under the GPL.
     [Garrett Rooney]

  *) Fix VPATH builds, and symlink builds where apr and apr-util
     reside in parallel as symlinks to directories with more explicit
     names, e.g. apr-1.x and apr-util-1.x.  This solves various breakage
     on Solaris in particular with ./buildconf and ./configure.
     [William Rowe]

  *) Add support for Berkeley DB 4.4 to the configure scripts.
     [Garrett Rooney]

Changes with APR-util 0.9.7

  *) Fix apr_rmm_realloc() offset calculation bug.  [Keith Kelleman